# kakigoori

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.gitea/workflows/: avifworker_build.yaml  docker_build.yaml  pytest.yaml  static_docker_build.yaml  worker_build.yaml  worker_clippy.yaml
avif_worker/: Dockerfile  docker-compose.yml  main.py
images/: apps.py  models.py  tasks.py  urls.py  utils.py  views.py
images/management/commands/: regenerate_variants.py  test_integrity.py  worker_results_processing.py
images/migrations/: 0007_image_version_imagevariant_available_and_more.py  0008_imagevariant_regenerate.py  0009_imagevariant_is_primary_variant.py  0010_remove_image_is_avif_available_and_more.py
kakigoori/: settings.py  traffic_filtering.py  traffic_rules.json  urls.py  utils.py
static/: Caddyfile  Dockerfile
static/css/: index.css  index.css.map  index.scss
templates/: index.html
tests/: pytest.ini  worker_test.py
worker/: Cargo.toml  Dockerfile  main.py  pyproject.toml
worker/src/: file_processors.rs  json_messages.rs  main.rs
