[project]
name = "kakigoori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.10.0",
    "boto3==1.40.46",
    "botocore==1.40.46",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "django>=5.2.1",
    "gunicorn==23.0.0",
    "idna==3.10",
    "jmespath==1.0.1",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pika>=1.3.2",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "python-dateutil==2.9.0.post0",
    "requests<3",
    "s3transfer>=0.14",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tzdata>=2025.2",
    "urllib3==2.5.0",
]

[dependency-groups]
dev = [
    "black>=24.4.2",
    "django-stubs>=5.2.0",
    "pika-stubs>=0.1.3",
    "ty>=0.0.1a7",
]
prod = [
    "psycopg2-binary>=2.9.10",
    "sentry-sdk>=2.29.1",
]
tests = [
    "pytest>=8.4.2",
    "testcontainers[postgres,rabbitmq]>=4.13.1",
]

[tool.uv.workspace]
members = [
    "worker",
]
