[project]
name = "kakigoori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.11.0",
    "boto3==1.41.5",
    "botocore==1.41.5",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "django==5.2.8",
    "gunicorn==23.0.0",
    "idna==3.11",
    "jmespath==1.0.1",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pika>=1.3.2",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "psycopg[binary,pool]>=3.2.12",
    "python-dateutil==2.9.0.post0",
    "requests<3",
    "s3transfer>=0.14",
    "six==1.17.0",
    "sqlparse==0.5.4",
    "tzdata>=2025.2",
    "urllib3==2.6.0",
]

[dependency-groups]
dev = [
    "black>=24.4.2",
    # "boto3-stubs[boto3]==1.40.64",
    "django-stubs>=5.2.0",
    "pika-stubs>=0.1.3",
    "ty>=0.0.1a7",
]
prod = [
    "sentry-sdk>=2.29.1",
]
tests = [
    "pytest>=8.4.2",
    "testcontainers[postgres,rabbitmq]>=4.13.1",
]
