[project]
name = "kakigoori"
version = "2.0.1"
description = "Image distribution for the web, simplified"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.42.54",
    "django==6.0.2",
    "gunicorn==23.0.0",
    "pika>=1.3.2",
    "pillow==12.1.1",
    "psycopg[binary,pool]>=3.2.12",
    "requests<3",
]

[dependency-groups]
dev = [
    "black>=24.4.2",
    "ty>=0.0.1a32",
    {include-group = "stubs"},
    {include-group = "test"},
]
stubs = [
    "boto3-stubs[boto3]==1.42.54",
    "django-stubs==5.2.9",
    "pika-stubs==0.1.3",
]
prod = [
    "sentry-sdk>=2.29.1",
]
test = [
    "pytest>=8.4.2",
    "testcontainers[postgres,rabbitmq]>=4.13.1",
]
